--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <video id="video" autoplay playsinline muted class="img-fluid"></video>
       </div>
       <button id="upload-button" class="btn btn-primary">Take a Photo</button>
+      <div id="uploading-indicator" style="display: none;">Uploading...</div>
       <script src="./src/js/script.js"></script>
     </div>
   </div>
