--- a/pages/works.html
+++ b/pages/works.html
@@ -38,7 +38,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            fetch('http://35.201.132.32:8055/items/works')
+            fetch('https://293751c156f8.ngrok.app/items/works')
                 .then(response => response.json())
                 .then(data => {
                     const container = document.getElementById('card-container');
