--- a/pages/works.html
+++ b/pages/works.html
@@ -78,6 +78,10 @@
                 .then(response => response.json())
                 .then(data => {
                     const container = document.getElementById('card-container');
+
+                    // Sort data in descending order based on date_created
+                    data.data.sort((a, b) => new Date(b.date_created) - new Date(a.date_created));
+                    
                     data.data.forEach(item => {
                         const card = document.createElement('div');
                         card.className = 'card';
