--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="container text-left">
       <h2>Instructions</h2>
       <div class="lead">
+        <p class="instruction"> Make sure device allow and enabled service of location and camera.</p>
         <p class="instruction">Follow the GPS coordinates to reach the first location.</p>
         <p class="instruction">When reaching the target location in range, you will receive further instructions.</p>
         <p class="instruction">You will need to take a photo of the target location to proceed.</p>
@@ -47,13 +48,14 @@
         <p class="instruction">The target coordinates will be updated every 2 weeks until the end of the exhibition.</p>
         <p class="instruction">Complete the instruction to proceed to the next location.</p>
         <p class="instruction">You will see the work via the redirect web page.</p>
-        <p class="instruction">This work is only available for mobile devices and make sure device allow service of location and camera.</p>
+        <p class="instruction">This work is only available for mobile devices</p>
       </div>
       <button id="start-button" class="btn btn-primary">Start</button>
     </div>
   </div>
   <div id="main-content" class="container text-center" style="display: none;">
     <div id="flash"></div>
+    <!-- <div id="gps-instructions"></div> -->
     <div id="message-container" class="container text-center">
       <div id="taipei-time" class="lead">N/A</div>
       <h1 id="message" class="display-4">Follow the coordinates to reach the target location in range.</h1>
