--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container text-left">
       <h2>Instructions</h2>
       <div class="lead">
-        <p class="instruction"> Make sure device allow and enabled service of location and camera.</p>
+        <p class="instruction"> Make sure device allow and enable location services.</p>
         <p class="instruction">Follow the GPS coordinates to reach the first location.</p>
         <p class="instruction">When reaching the target location in range, you will receive further instructions.</p>
         <p class="instruction">You will need to take a photo of the target location to proceed.</p>
@@ -59,14 +59,14 @@
     <div id="message-container" class="container text-center">
       <div id="taipei-time" class="lead">N/A</div>
       <h1 id="message" class="display-4">Follow the coordinates to reach the target location in range.</h1>
-      <div id="distance" class="lead">N/A</div>
-      <div id="coordinates" class="lead">N/A</div>
+      <div id="distance" class="lead">Pls. make device allow and enable location services.</div>
+      <div id="coordinates" class="lead">GPS location is not available.</div>
       <div id="video-container" class="my-3">
         <video id="video" autoplay playsinline muted class="img-fluid"></video>
       </div>
       <button id="upload-button" class="btn btn-primary">Take a Photo</button>
       <div id="uploading-indicator" style="display: none;">Uploading...</div>
-      <script src="./src/js/script.js"></script>
+      <script src="./src/js/script.min.js"></script>
     </div>
   </div>
 </body>
