--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <button id="upload-button" class="btn btn-primary">Take a Photo</button>
       <div id="uploading-indicator" style="display: none;">Uploading...</div>
-      <script src="./src/js/script.min.js"></script>
+      <script src="./src/js/script.js"></script>
     </div>
   </div>
 </body>
