add redirect and update meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>There Will Be Works</title>
   <!-- Favicon -->
   <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
@@ -66,6 +67,7 @@
       </div>
       <button id="upload-button" class="btn btn-primary">Take a Photo</button>
       <div id="uploading-indicator" style="display: none;">Uploading...</div>
+      <script src="./src/js/redirect.js"></script>
       <script src="./src/js/script.js"></script>
     </div>
   </div>
