--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- Basic SEO -->
+  <meta name="description"
+    content="There Will Be Works strategically places artworks in specific areas at irregular intervals, without revealing their exact locations. It provides a space for active exploration and participation that changes over time. These works may be searched for or discovered, with potential discoveries forming an essential part of the artwork itself.">
+  <meta name="keywords" content="art, urban society, street photography, contemporary art, modern art">
+  <meta name="author" content="HsienYU CHENG">
+  <meta name="robots" content="index, follow">
   <title>There Will Be Works</title>
   <!-- Favicon -->
   <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
