--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 class="display-1">There Will Be Works</h1>
     <div class="container text-left">
       <h2>Instructions</h2>
-      <div class="lead">
+      <div id="instruction-container" class="lead">
         <div class="instruction-en">
           <p>Make sure device allow and enable location services.</p>
           <p>Follow the GPS coordinates to reach the first location.</p>
