update no works page

--- a/pages/works.html
+++ b/pages/works.html
@@ -115,7 +115,7 @@
 
                         const title = document.createElement('h5');
                         title.className = 'card-title';
-                        title.textContent = 'unknown';
+                        title.textContent = `photography #${item.id}`;
 
                         const year = document.createElement('h5');
                         year.className = 'card-year';
@@ -123,7 +123,7 @@
 
                         const material = document.createElement('h5');
                         material.className = 'card-material';
-                        material.textContent = 'Mixed Media';
+                        material.textContent = 'photo documentary';
 
 
                         const description = document.createElement('p');
