--- a/pages/works.html
+++ b/pages/works.html
@@ -123,7 +123,7 @@
 
                         const material = document.createElement('h5');
                         material.className = 'card-material';
-                        material.textContent = 'photo documentary';
+                        material.textContent = 'photo documentary / street photography';
 
 
                         const description = document.createElement('p');
