--- a/pages/works.html
+++ b/pages/works.html
@@ -142,7 +142,7 @@
                     const backButton = document.createElement('a');
                     backButton.href = 'https://therewillbeworks.com';
                     backButton.className = 'back-button';
-                    backButton.textContent = 'Go Back';
+                    backButton.textContent = 'Go Back and Start to Next Location.';
                     container.appendChild(backButton);
                 })
                 .catch(error => console.error('Error fetching data:', error));
