--- a/pages/works.html
+++ b/pages/works.html
@@ -119,7 +119,7 @@
 
                         const year = document.createElement('h5');
                         year.className = 'card-year';
-                        year.textContent = '2024';
+                        year.textContent = `${formatDate(item.date_created)}`;
 
                         const material = document.createElement('h5');
                         material.className = 'card-material';
@@ -147,6 +147,17 @@
                 })
                 .catch(error => console.error('Error fetching data:', error));
         });
+
+        function formatDate(dateString) {
+            const date = new Date(dateString);
+            const year = date.getFullYear();
+            const month = (date.getMonth() + 1).toString().padStart(2, '0');
+            const day = date.getDate().toString().padStart(2, '0');
+            const hours = date.getHours().toString().padStart(2, '0');
+            const minutes = date.getMinutes().toString().padStart(2, '0');
+
+            return `${year}           ${month}/${day} ${hours}:${minutes}`;
+        }
     </script>
 </body>
 
