update and add para. nextLocation

--- a/pages/works.html
+++ b/pages/works.html
@@ -155,7 +155,7 @@
                     });
                     // Create and append the back button
                     const backButton = document.createElement('a');
-                    backButton.href = 'https://therewillbeworks.com';
+                    backButton.href = 'https://therewillbeworks.com?nextLocation=true';
                     backButton.className = 'back-button';
                     backButton.textContent = 'Go Back and Start to Next Location.';
                     container.appendChild(backButton);
