--- a/pages/works.html
+++ b/pages/works.html
@@ -74,6 +74,8 @@
         }
 
         .back-button {
+            position: fixed;
+            bottom: 20px;
             margin-top: 20px;
             padding: 10px 20px;
             font-size: 16px;
@@ -157,7 +159,7 @@
                     const backButton = document.createElement('a');
                     backButton.href = 'https://therewillbeworks.com?nextLocation=true';
                     backButton.className = 'back-button';
-                    backButton.textContent = 'Go Back and Start to Next Location.';
+                    backButton.textContent = 'Start to Next Location.';
                     container.appendChild(backButton);
                 })
                 .catch(error => console.error('Error fetching data:', error));
