--- a/pages/works.html
+++ b/pages/works.html
@@ -101,8 +101,17 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            fetch('https://0b98a06522fd.ngrok.app/items/works')
-                .then(response => response.json())
+            fetch('https://0b98a06522fd.ngrok.app/items/works', {
+                headers: {
+                    'ngrok-skip-browser-warning': 'any-value'
+                }
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     const container = document.getElementById('card-container');
 
