--- a/pages/works.html
+++ b/pages/works.html
@@ -103,7 +103,7 @@
         document.addEventListener('DOMContentLoaded', function () {
             fetch('https://0b98a06522fd.ngrok.app/items/works', {
                 headers: {
-                    'ngrok-skip-browser-warning': 'any-value'
+                    'ngrok-skip-browser-warning': '010101'
                 }
             })
                 .then(response => {
