--- a/pages/works.html
+++ b/pages/works.html
@@ -102,7 +102,12 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             fetch('https://0b98a06522fd.ngrok.app/items/works', {
+                method: 'GET',
+                mode: 'cors',
+                credentials: 'include',
                 headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json',
                     'ngrok-skip-browser-warning': 'true'
                 }
             })
