--- a/pages/works.html
+++ b/pages/works.html
@@ -129,7 +129,7 @@
 
                         const img = document.createElement('img');
                         console.log(item.photo);
-                        img.src = `https://data.therewillbeworks.com/${item.photo}`;
+                        img.src = `https://data.therewillbeworks.com/assets/${item.photo}`;
                         img.alt = 'Work image';
 
                         const cardBody = document.createElement('div');
